<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/Content_Top"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/nav" >

        <Button
            android:id="@+id/About_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/back"
            android:text="返回"
            android:textColor="@android:color/white"
             />

        <TextView
            android:id="@+id/Content_nav_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="医生介绍"
            android:textColor="#FFFFFF"
            android:textSize="22dip"
             />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/Content_buttom"
        android:layout_below="@+id/Content_Top"
        android:orientation="vertical"
        android:weightSum="7" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/contentbg"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" 
                android:weightSum="5"
                android:layout_margin="20dp">

                <ImageView
                    android:id="@+id/Content_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:scaleType="fitXY"
                    android:layout_weight="1"
                    android:src="@drawable/one" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="4"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/Content_Name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="姓        名:    彭林"
                        android:textColor="@android:color/black"
                        android:textSize="6pt" />

                    <TextView
                        android:id="@+id/Content_Division"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="科        室:    口腔预防科"
                        android:textColor="@android:color/black"
                        android:textSize="6pt" />

                    <Button
                        android:id="@+id/Content_Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/askbtn" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/white"
            android:orientation="horizontal" >
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_margin="20dp"><!-- 边距layout -->
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="6pt"
                android:textColor="#d71345"
                android:text="@string/Content_Field"/>
            <TextView 
                android:id="@+id/Content_Field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="6pt"
                android:textColor="@android:color/black"
                android:text="@string/Content_Field"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="6pt"
                android:textColor="#d71345"
                android:text="@string/Content_Summary"/>
            <TextView 
                android:id="@+id/Content_Summary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@android:color/black"
                android:textSize="6pt"
                android:text="@string/Content_Summary"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Content_buttom"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@drawable/buttombg" >
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView 
                android:id="@+id/Content_Buttom_Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/weibo"/>
            <TextView 
                android:id="@+id/Content_Buttom_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="6pt"
                android:textColor="@android:color/white"
                android:text="@string/Content_Weibo"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>